Aggiornamento completo della repository

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <input id="search-input" placeholder="Cerca canale..." />
     </div>
     <div id="video-container">
-      <video autoplay id="video" tabindex="0"></video>
+      <video autoplay id="video" poster="//raw.githubusercontent.com/nero081/loghi/main/loghi3/logo.jpg" tabindex="0"></video>
       <div id="video-ui"></div>
     </div>
   </div>
