Aggiornamento completo della repository

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       background-color: #61dafb; color: black; cursor: pointer;
     }
     #error-msg { color: #ff6666; height: 20px; font-weight: bold; margin-top: 10px; }
-    
     #playlist {
       width: 250px; background: #282c34; color: white; overflow-y: auto; border-right: 1px solid #444;
       padding: 20px; box-shadow: 2px 0 5px rgba(0,0,0,0.2); display: flex; flex-direction: column;
@@ -130,12 +129,35 @@
       const videoContainer = document.getElementById("video-container");
       const qualitySelect = document.getElementById("quality-select");
       let channels = [];
-      let grouped = {};
+      let grouped = new Map();
       let player;
 
-      function buildGroups(filteredMode = false) {
+      function buildSimpleList(filtered = null) {
         videoList.innerHTML = "";
-        Object.keys(grouped).forEach(group => {
+        const list = filtered || channels;
+        list.forEach(c => {
+          const li = document.createElement("li");
+          li.innerHTML = `<img src="${c.tvgLogo}" alt="" width="50" height="50" style="margin-right: 10px;" /><span>${c.channelName}</span>`;
+          li.onclick = () => {
+            if (c.licenseKey) {
+              const keys = JSON.parse(decodeURIComponent(c.licenseKey));
+              keys.forEach(({ keyId, key }) =>
+                player.configure({ drm: { clearKeys: { [keyId]: key } } })
+              );
+            }
+            player.load(c.manifestUrl).then(() => {
+              applyQuality();
+              videoElement.play();
+              goFullscreen();
+            });
+          };
+          videoList.appendChild(li);
+        });
+      }
+
+      function buildGroupsFromMap(filteredMode = false) {
+        videoList.innerHTML = "";
+        grouped.forEach((channelList, group) => {
           const header = document.createElement("li");
           header.className = "group-header";
           header.textContent = group;
@@ -144,7 +166,7 @@
           videoList.appendChild(header);
 
           if (filteredMode) {
-            grouped[group].forEach(c => {
+            channelList.forEach(c => {
               const li = document.createElement("li");
               li.dataset.parent = group;
               li.innerHTML = `<img src="${c.tvgLogo}" alt="" width="50" height="50" style="margin-right: 10px;" /><span>${c.channelName}</span>`;
@@ -172,7 +194,7 @@
         const expanded = header.dataset.expanded === "true";
         document.querySelectorAll(`li[data-parent="${group}"]`).forEach(el => el.remove());
         if (!expanded) {
-          grouped[group].forEach(c => {
+          grouped.get(group).forEach(c => {
             const li = document.createElement("li");
             li.dataset.parent = group;
             li.innerHTML = `<img src="${c.tvgLogo}" alt="" width="50" height="50" style="margin-right: 10px;" /><span>${c.channelName}</span>`;
@@ -229,13 +251,18 @@
       searchInput.addEventListener("input", () => {
         const term = searchInput.value.toLowerCase();
         const filtered = channels.filter(c => c.channelName.toLowerCase().includes(term));
-        grouped = {};
-        filtered.forEach(c => {
-          const g = c.groupTitle || "Altri";
-          if (!grouped[g]) grouped[g] = [];
-          grouped[g].push(c);
-        });
-        buildGroups(true);
+        const hasGroups = filtered.some(c => c.groupTitle && c.groupTitle.trim() !== "");
+        if (hasGroups) {
+          grouped = new Map();
+          filtered.forEach(c => {
+            const g = c.groupTitle.trim();
+            if (!grouped.has(g)) grouped.set(g, []);
+            grouped.get(g).push(c);
+          });
+          buildGroupsFromMap(true);
+        } else {
+          buildSimpleList(filtered);
+        }
       });
 
       shaka.polyfill.installAll();
@@ -249,12 +276,18 @@
           const parser = new M3U8Interpreter(text);
           parser.parse();
           channels = parser.getChannels();
-          channels.forEach(c => {
-            const g = c.groupTitle || "Altri";
-            if (!grouped[g]) grouped[g] = [];
-            grouped[g].push(c);
-          });
-          buildGroups();
+          const hasGroups = channels.some(c => c.groupTitle && c.groupTitle.trim() !== "");
+          if (hasGroups) {
+            grouped = new Map();
+            channels.forEach(c => {
+              const g = c.groupTitle.trim();
+              if (!grouped.has(g)) grouped.set(g, []);
+              grouped.get(g).push(c);
+            });
+            buildGroupsFromMap();
+          } else {
+            buildSimpleList();
+          }
         });
 
       document.addEventListener("fullscreenchange", handleFullscreenExit);
