Aggiornamento completo della repository

--- a/nuovo1.html
+++ b/nuovo1.html
@@ -1,120 +1,122 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta content="width=device-width,initial-scale=1" name="viewport" />
-    <meta content="no-referrer" name="referrer" />
-    <link href="data:image/x-icon;," rel="icon" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.11.2/controls.min.css" rel="stylesheet" />
-    <style>
-      body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        display: flex;
-        height: 100vh;
-        background-color: #282c34;
-      }
-      #playlist {
-        width: 250px;
-        background-color: #282c34;
-        color: #fff;
-        overflow-y: auto;
-        border-right: 1px solid #444;
-        padding: 20px;
-        box-shadow: 2px 0 5px rgb(0 0 0 / 0.2);
-        display: flex;
-        flex-direction: column;
-      }
-      #search-input {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 10px;
-        border: 1px solid #444;
-        border-radius: 5px;
-        background-color: #3c4043;
-        color: #fff;
-        font-size: 1em;
-        box-sizing: border-box;
-      }
-      #quality-select {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 10px;
-        border: 1px solid #444;
-        border-radius: 5px;
-        background-color: #3c4043;
-        color: #fff;
-        font-size: 1em;
-        box-sizing: border-box;
-        cursor: pointer;
-      }
-      #video-container {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        z-index: 2;
-        position: relative;
-      }
-      #video {
-        flex: 1;
-        width: 100%;
-        height: 100%;
-        background-color: #000;
-      }
-      #video-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
-      #video-list li {
-        padding: 10px;
-        margin: 5px 0;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease, transform 0.2s ease;
-        display: flex;
-        align-items: center;
-      }
-      #video-list li:hover {
-        background-color: #61dafb;
-        transform: scale(1.05);
-      }
-      #video-list img {
-        width: 50px;
-        height: 50px;
-        margin-right: 10px;
-        border-radius: 5px;
-        object-fit: contain;
-      }
-      .video-title {
-        font-size: 1em;
-      }
-      .group-header {
-        font-weight: bold;
-        background-color: #444;
-        padding: 8px;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-      .shaka-controls-container.shaka-show-controls {
-        opacity: 1 !important;
-        visibility: visible !important;
-        pointer-events: auto !important;
-      }
-    </style>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>IPTV Protetta</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.11.2/controls.min.css" />
+  <style>
+    html, body { margin: 0; padding: 0; height: 100%; background: #282c34; font-family: Arial, sans-serif; overflow: hidden; }
+    #app-container { display: none; height: 100vh; display: flex; }
+    #password-modal {
+      position: fixed; top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.85); display: flex; justify-content: center; align-items: center;
+      z-index: 9999;
+    }
+    #password-box {
+      background: #20232a; padding: 30px 40px; border-radius: 10px;
+      box-shadow: 0 0 20px #61dafb; color: white; text-align: center; width: 300px;
+    }
+    #password-box input, #password-box button {
+      width: 100%; padding: 10px; margin-top: 10px; font-size: 1em;
+      border: none; border-radius: 6px; box-sizing: border-box;
+    }
+    #password-box button {
+      background-color: #61dafb; color: black; cursor: pointer;
+    }
+    #error-msg { color: #ff6666; height: 20px; font-weight: bold; margin-top: 10px; }
+
+    /* Modifiche per playlist a griglia */
+    #playlist {
+      width: 320px; background: #282c34; color: white; overflow-y: auto; border-right: 1px solid #444;
+      padding: 20px; box-shadow: 2px 0 5px rgba(0,0,0,0.2);
+      display: flex;
+      flex-direction: column;
+    }
+    #quality-select, #search-input {
+      padding: 10px; border: 1px solid #444; border-radius: 5px; background: #3c4043; color: white;
+      font-size: 1em; margin-bottom: 10px;
+    }
+    #video-list {
+      list-style: none; padding: 0; margin: 0;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+    }
+    /* Gruppi come intestazioni */
+    .group-header {
+      width: 100%;
+      font-weight: bold;
+      background-color: #444;
+      padding: 8px 12px;
+      border-radius: 5px;
+      cursor: pointer;
+      user-select: none;
+      margin-top: 15px;
+    }
+    /* Singolo canale a icona */
+    #video-list li {
+      width: 90px;
+      cursor: pointer;
+      background: #20232a;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #61dafb88;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 8px 5px;
+      transition: transform 0.2s ease, box-shadow 0.3s ease;
+      text-align: center;
+      user-select: none;
+    }
+    #video-list li:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 20px #61dafb;
+    }
+    #video-list li img {
+      width: 70px;
+      height: 70px;
+      object-fit: contain;
+      border-radius: 6px;
+      margin-bottom: 5px;
+    }
+    #video-list li span {
+      font-size: 0.85em;
+      color: white;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      width: 100%;
+    }
+
+    #video-container { flex: 1; display: flex; flex-direction: column; position: relative; z-index: 2; }
+    #video { flex: 1; width: 100%; height: 100%; background: black; }
+  </style>
+</head>
+<body>
+<div id="password-modal">
+  <div id="password-box">
+    <h2>Accesso Protetto</h2>
+    <input type="password" id="password-input" placeholder="Inserisci password" />
+    <button onclick="checkPassword()">Entra</button>
+    <div id="error-msg"></div>
+  </div>
+</div>
+
+  
+
+  <div id="app-container">
     <div id="playlist">
-      <select id="quality-select" aria-label="Seleziona qualità video">
+      <select id="quality-select">
         <option value="auto">Ris. Automatica</option>
         <option value="low">Ris. Bassa</option>
         <option value="medium">Ris. Media</option>
         <option value="high">Ris. Alta</option>
       </select>
+      <input id="search-input" placeholder="Cerca canale..." />
       <ul id="video-list"></ul>
-      <input id="search-input" placeholder="Search..." aria-label="Cerca canale" />
     </div>
-
     <div id="video-container">
       <video autoplay id="video" tabindex="0"></video>
       <div id="video-ui"></div>
@@ -127,6 +129,38 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://dbghelp.github.io/xml-epg.js"></script>
     <script>
+	
+  const correctPassword = "1123";  // 🔒 Cambiala qui se vuoi
+  const passwordKey = "iptv-password-v1"; // cambia versione se cambi password
+
+  function checkPassword() {
+    const input = document.getElementById("password-input").value;
+    const errorMsg = document.getElementById("error-msg");
+
+    if (input === correctPassword) {
+      localStorage.setItem(passwordKey, correctPassword); // ✅ memorizza
+      unlockApp();
+    } else {
+      errorMsg.textContent = "Password errata!";
+    }
+  }
+
+  function unlockApp() {
+    document.getElementById("password-modal").style.display = "none";
+    document.getElementById("app-container").style.display = "flex";
+  }
+
+  document.getElementById("password-input").addEventListener("keydown", function (e) {
+    if (e.key === "Enter") checkPassword();
+  });
+
+  // 🔁 Controllo automatico al load
+  const storedPass = localStorage.getItem(passwordKey);
+  if (storedPass === correctPassword) {
+    unlockApp(); // 🎉 già autenticato
+  }
+
+
       const xmlepg = new XMLEPG();
       const searchInput = document.getElementById("search-input");
       const videoList = document.getElementById("video-list");
@@ -201,6 +235,7 @@
           videoList.appendChild(li);
         });
       }
+	  
 
       function toggleGroup(groupName) {
         const parentLi = Array.from(document.querySelectorAll("li.group-header"))
@@ -317,7 +352,7 @@
 
         player.configure({ abr: { enabled: currentQuality === "auto" } });
 
-        const githubPlaylistUrl = "https://raw.githubusercontent.com/nero081/loghi/main/canali.m3u";
+        const githubPlaylistUrl = "./canali.m3u";
         fetch(githubPlaylistUrl)
           .then(res => res.text())
           .then(parseAndSetPlaylist);
