--- a/partite/set/index.html
+++ b/partite/set/index.html
@@ -7,7 +7,7 @@
 <script>
   function verificaPassword() {
     const password = prompt("Inserisci la password:");
-    const passwordCorretta = "tuaPasswordQui";
+    const passwordCorretta = "nero";
 
     if (password === null || password !== passwordCorretta) {
       alert("Accesso negato.");
