--- a/partite/set/index.html
+++ b/partite/set/index.html
@@ -13,7 +13,7 @@
       alert("Accesso negato.");
       document.body.innerHTML = ""; // Nasconde il contenuto della pagina
     } else {
-      window.location.href = "Gruppi.html";
+      window.location.href = "index.html";
     }
   }
 </script>
