--- a/partite/set/index.html
+++ b/partite/set/index.html
@@ -4,22 +4,10 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
   <title>Gruppi</title>
-<script>
-  function verificaPassword() {
-    const password = prompt("Inserisci la password:");
-    const passwordCorretta = "nero";
 
-    if (password === null || password !== passwordCorretta) {
-      alert("Accesso negato.");
-      document.body.innerHTML = ""; // Nasconde il contenuto della pagina
-    } else {
-      window.location.href = "index.html";
-    }
-  }
-</script>
 
 </head>
-<body onload="verificaPassword()">
+<body>
   <h1>Seleziona un Gruppo</h1>
   <div class="griglia">
     
