Aggiornamento completo della repository

--- a/partite/set/Animazione.html
+++ b/partite/set/Animazione.html
@@ -9,7 +9,7 @@
   <h1>Animazione</h1>
   <div class="griglia">
     
-  <a class="canale" href="player.html?url=https%3A//vixsrc.to/movie/803796%3Flang%3Dit" target="_blank">
+    <a class="canale" href="player.html?url=https%3A//vixsrc.to/movie/803796%3Flang%3Dit%26autoplay%3D1" target="_blank">
     <img src="https://image.tmdb.org/t/p/w500/jfS5KEfiwsS35ieZvdUdJKkwLlZ.jpg" alt="KPop Demon Hunters (2025) [Animazione Fantasy Azione Musica Commedia] ⭐10.0">
     <p>KPop Demon Hunters (2025) [Animazione Fantasy Azione Musica Commedia] ⭐10.0</p>
   </a>
