--- a/partite/primo/menu.html
+++ b/partite/primo/menu.html
@@ -15,7 +15,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #f0f0f0;
+      background: 1a1a1a;
       font-family: sans-serif;
       padding: 20px;
       box-sizing: border-box;
